<resources>
    <string name="app_name">M07_UF1_P1.6Books</string>
    <string name="create_book">CREATE NEW BOOK</string>
    <string name="title">Title: </string>
    <string name="author">Author: </string>
    <string name="status">Status: </string>
    <string name="Rating">Rating: </string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">Cancel</string>
    <string-array name="status">
        <item>Want to read</item>
        <item>Reading</item>
        <item>Read</item>
    </string-array>
    <string name="empty_title">Title cannot be empty</string>
    <string name="empty_author">Author cannot be empty</string>
    <string name="title_list">TITLE</string>
    <string name="status_list">STATUS</string>
    <string name="author_list">AUTHOR</string>
</resources>